--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-     <h1>pizzeria chicharro</h1>
+        <h1>pizza chicharro</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">inicio</a></li>
