--- a/index.html
+++ b/index.html
@@ -4,27 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./ccs/style.css">
+    <title>document</title>
 </head>
 
 <body>
     <header>
-        <h1>pizza chicharro</h1>
-        <nav>
-            <ul>
-                <li><a href="./index.html">inicio</a></li>
-                <li><a href="./pages/nosotros.html">nosotros</a></li>
-                <li><a href="./pages/producto.html">productos</a></li>
-                <li><a href="./pages/servicios.html">servicios</a></li>
-                <li><a href="./pages/contacto.html">contactos</a></li>
-            </ul>
-        </nav>
+        <h1>pizza chicharro<h1>
+                <nav>
+                    <ul>
+                        <li><a href="./index.html">inicio</a></li>
+                        <li><a href="./pages/nosotros.html">nosotros</a></li>
+                        <li><a href="./pages/producto.html">productos</a></li>
+                        <li><a href="./pages/servicios.html">servicios</a></li>
+                        <li><a href="./pages/contacto.html">contactos</a></li>
+                    </ul>
+                </nav>
 
     </header>
     <main>
+        
         <section class="lasmejores">
             <h2>las mejores pizzas</h2>
+            <h1>nuestras promos</h1>
+            <section class="flexcontainer>">
+                <div class="caja">
+                    pizza turbo 
+                </div>
+                <div class="caja">
+                    pizza hate
+                </div>
+                <div class="caja">
+                    pizza pride
+
+                </div>
+            </section>
+            <section>
+                <h1>hola que tal</h1>
+            </section>
             <div>
                 <img src="./img/pizza panceta.jpg" alt="">
                 <h3>panceta</h3>
@@ -49,9 +68,12 @@
         <section class="deitalia">
             <div>
                 <h3>De italia al mundo entero</h3>
-                <p> La pizza es una de las comidas más globales de nuestro planeta, que se ha extendido desde Nápoles al
-                    resto de Italia y posteriormente a otros países del mundo, por una lado debido a la inmigración
-                    italiana a otros países del mundo, y por otro debido a la simplicidad de la receta y lo sencillo de
+                <p> La pizza es una de las comidas más globales de nuestro planeta, que se ha extendido desde
+                    Nápoles al
+                    resto de Italia y posteriormente a otros países del mundo, por una lado debido a la
+                    inmigración
+                    italiana a otros países del mundo, y por otro debido a la simplicidad de la receta y lo
+                    sencillo de
                     sus ingredientes, económicos y habituales en todos los hogares.</p>
             </div>
             <img src="img/qqqqqqqqqqqqqqqqqqqqqqqqqqqqq.jpg" alt="">
@@ -76,6 +98,9 @@
             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
