--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../ccs/style.css">
+    <title>document</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -23,11 +27,17 @@
     </main>
     <footer id="contactos">
         <div>
-            <a href="https://es-es.facebook.com/login.php" target="_blank"><img src="../img/facebook.png" alt="logo facebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="logo instangram"></a>
+            <a href="https://es-es.facebook.com/login.php" target="_blank"><img src="../img/facebook.png"
+                    alt="logo facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png"
+                    alt="logo instangram"></a>
             <a href="https://mail.google.com/" target="_blank"><img src="../img/gmail-logo.png" alt="logo gmail"></a>
-            
+
         </div>
-            </footer>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
