--- a/index.html
+++ b/index.html
@@ -12,57 +12,82 @@
 
 <body>
     <header>
-        <h1>pizza chicharro<h1>
-                <nav>
-                    <ul>
-                        <li><a href="./index.html">inicio</a></li>
-                        <li><a href="./pages/nosotros.html">nosotros</a></li>
-                        <li><a href="./pages/producto.html">productos</a></li>
-                        <li><a href="./pages/servicios.html">servicios</a></li>
-                        <li><a href="./pages/contacto.html">contactos</a></li>
-                    </ul>
-                </nav>
-
+        <h1>pizza chicharro</h1>
+        <nav>
+            <ul>
+                <li><a href="./index.html">inicio</a></li>
+                <li><a href="./pages/nosotros.html">nosotros</a></li>
+                <li><a href="./pages/producto.html">productos</a></li>
+                <li><a href="./pages/servicios.html">servicios</a></li>
+                <li><a href="./pages/contacto.html">contactos</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        
+
         <section class="lasmejores">
             <h2>las mejores pizzas</h2>
             <h1>nuestras promos</h1>
-            <section class="flexcontainer>">
+            <section class="flexcontainer">
                 <div class="caja">
-                    pizza turbo 
+                    pizza turbo
                 </div>
                 <div class="caja">
                     pizza hate
                 </div>
                 <div class="caja">
                     pizza pride
-
                 </div>
             </section>
-            <section>
-                <h1>hola que tal</h1>
+            <section class="carrouselPizzeria">
+                <div id="carrouselPizzeria" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carrouselPizzeria" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carrouselPizzeria" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carrouselPizzeria" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/fondo1.jpeg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/fondo2.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/fondo3.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carrouselPizzeria" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carrouselPizzeria" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
             </section>
-            <div>
-                <img src="./img/pizza panceta.jpg" alt="">
-                <h3>panceta</h3>
-                <button>pedir</button>
-            </div>
-            <div>
-                <img src="./img/pizza margarita.jpg" alt="">
-                <h3>margherita</h3>
-                <button>pedir</button>
-            </div>
-            <div>
-                <img src="./img/pizza a la italiana.jpg" alt="">
-                <h3>italiana</h3>
-                <button>pedir</button>
-            </div>
-            <div>
-                <img src="./img/pizza especial.jpg" alt="">
-                <h3>especial titalisima</h3>
-                <button>pedir</button>
+            <div class="listadoPizzas">
+                <div>
+                    <img src="./img/pizza panceta.jpg" alt="">
+                    <h3>panceta</h3>
+                    <button>pedir</button>
+                </div>
+                <div>
+                    <img src="./img/pizza margarita.jpg" alt="">
+                    <h3>margherita</h3>
+                    <button>pedir</button>
+                </div>
+                <div>
+                    <img src="./img/pizza a la italiana.jpg" alt="">
+                    <h3>italiana</h3>
+                    <button>pedir</button>
+                </div>
+                <div>
+                    <img src="./img/pizza especial.jpg" alt="">
+                    <h3>especial titalisima</h3>
+                    <button>pedir</button>
+                </div>
             </div>
         </section>
         <section class="deitalia">
