--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,6 +11,16 @@
 </head>
 
 <body>
+    <h1>Quiénes Somos</h1>
+    <div class="story">
+        <img src="../img/fondopizzaaaaaaaaaaaaaaaaaaa.jpg" alt="Nosotros">
+        <p>En pizzeria chicharro, hemos estado sirviendo a nuestros clientes desde 1990. Nuestra misión es conquistar su paladar y dejar una agradable experiencia. Desde nuestros humildes comienzos, hemos crecido y evolucionado para convertirnos en una de las mejores pizzerias del pais.</p>
+        <p>Nuestra pasión por la pizaa nos impulsa a buscar constantemente la excelencia en todo lo que hacemos. Nos enorgullecemos de nuestra calidad y precios.</p>
+        <p>Con un equipo de profesionales dedicados y apasionados, estamos comprometidos a calidad, la satisfacción y a mantener elrendimiento.</p>
+        <p>Gracias a nuestros clientes y socios, hemos logrado mantenernos en pie a lo largo de estos años.</p>
+        <p>En el futuro, seguiremos expandiendonos por todo buenos aires</p>
+        <p>Gracias por ser parte de nuestra historia y permitirnos servirles.</p>
+    </div>
     <header>
         <nav>
             <ul>
