--- a/pages/producto.html
+++ b/pages/producto.html
@@ -11,6 +11,28 @@
 </head>
 
 <body>
+        <h1>Nuestros Productos - Pizzería</h1>
+        <div class="product">
+            <img src="pizza_hawaiana.jpg" alt="Pizza Hawaiana">
+            <h2>Pizza Hawaiana</h2>
+            <p>Ingredientes: Jamón, piña, queso mozzarella y salsa de tomate.</p>
+            <p>Tamaño: Mediana (8 porciones)</p>
+            <p>Precio: $12.99</p>
+        </div>
+        <div class="product">
+            <img src="pizza_pepperoni.jpg" alt="Pizza de Pepperoni">
+            <h2>Pizza de Pepperoni</h2>
+            <p>Ingredientes: Pepperoni, queso mozzarella y salsa de tomate.</p>
+            <p>Tamaño: Grande (12 porciones)</p>
+            <p>Precio: $15.99</p>
+        </div>
+        <div class="product">
+            <img src="pizza_vegetariana.jpg" alt="Pizza Vegetariana">
+            <h2>Pizza Vegetariana</h2>
+            <p>Ingredientes: Champiñones, pimientos, cebolla, aceitunas, queso mozzarella y salsa de tomate.</p>
+            <p>Tamaño: Mediana (8 porciones)</p>
+            <p>Precio: $13.99</p>
+        </div>
     <header>
         <nav>
             <ul>
