--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,8 +9,20 @@
     <link rel="stylesheet" href="../ccs/style.css">
     <title>document</title>
 </head>
-
 <body>
+        <h1>nuestras super promos</h1>
+        <div class="service">
+            <h2>promo 1 </h2>
+            <p>pizza napo + 6 empanadas</p>
+        </div>
+        <div class="service">
+            <h2>promo 2</h2>
+            <p>dos titalisimas + una coca </p>
+        </div>
+        <div class="service">
+            <h2>promo 3</h2>
+            <p>pizza jamon y morron + gaseosa</p>
+        </div>
     <header>
         <nav>
             <ul>
@@ -40,5 +52,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+</body>
 
 </html>
